--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-opencv=3.4.2
+opencv-python==4.1.2.30
 dlib==19.18.0
 numpy==1.17.3
 pillow==6.2.1
+--find-links https://download.pytorch.org/whl/torch_stable.html
+torch==1.4.0+cpu
+torchvision==0.5.0+cpu
